code quality enhancements